--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date"></span>
-									<h2><a href="https://github.com/sivagami-murugesan/sivagami-murugesan.github.io/blob/main/SQL%20query.sql">Cyclistic case study<br />
+									<h2><a href="https://github.com/sivagami-murugesan/sivagami-murugesan.github.io/blob/main/Cyclistic_Documentation%20.pdf">Cyclistic case study<br />
 										</a></h2>
 									<p>Data Analysis using SQL and Tableau</p>
 								</header>
-								<a href="https://github.com/sivagami-murugesan/sivagami-murugesan.github.io/blob/main/SQL%20query.sql" class="image main"><img src="https://media-exp1.licdn.com/dms/image/C4D12AQFcN3spmvPcNw/article-cover_image-shrink_600_2000/0/1628010650672?e=2147483647&v=beta&t=X2cd6qBxXaUF_tEsmPRXqIHTu1ZwmKK61o3jNVk7cXI" alt="" /></a>
+								<a href="https://github.com/sivagami-murugesan/sivagami-murugesan.github.io/blob/main/Cyclistic_Documentation%20.pdf" class="image main"><img src="https://media-exp1.licdn.com/dms/image/C4D12AQFcN3spmvPcNw/article-cover_image-shrink_600_2000/0/1628010650672?e=2147483647&v=beta&t=X2cd6qBxXaUF_tEsmPRXqIHTu1ZwmKK61o3jNVk7cXI" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/sivagami-murugesan/sivagami-murugesan.github.io/blob/main/SQL%20query.sql" class="button large">View Project</a></li>
+									<li><a href="https://github.com/sivagami-murugesan/sivagami-murugesan.github.io/blob/main/Cyclistic_Documentation%20.pdf" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
